--- a/pipeline/params.yaml
+++ b/pipeline/params.yaml
@@ -49,104 +49,110 @@ dataset:
   name: "Diabetes 130-US Hospitals for Years 1999-2008"
   id: 296
   source: ucimlrepo
+  timestamp: "1999-01-01T00:00:00Z"
   splits:
     train: 0.80
     test: 0.10
     val: 0.10
 
-models.base:
-  mode: quick
-  label: readmitted
-  metric: roc_auc
-  problem_type: binary
+models:
+  base:
+    mode: quick
+    label: readmitted
+    metric: roc_auc
+    problem_type: binary
 
-models.autogluon.quick:
-  time_limit: 60
-  presets: medium_quality
-  hyperparameters:
-    GBM:
-      extra_trees: false
-      learning_rate: 0.1
-      num_boost_round: 100
-      num_leaves: 16
-      early_stopping_rounds: 10
+  autogluon:
+    quick:
+      time_limit: 60
+      presets: medium_quality
+      hyperparameters:
+        GBM:
+          extra_trees: false
+          learning_rate: 0.1
+          num_boost_round: 100
+          num_leaves: 16
+          early_stopping_rounds: 10
 
-models.autogluon.full:
-  time_limit: 7200
-  presets: best_quality
-  hyperparameters:
-    GBM:
-      extra_trees: true
-      learning_rate: 0.05
-      num_boost_round: 500
-      num_leaves: 128
-      feature_fraction: 0.8
-      min_data_in_leaf: 20
-    CAT:
-      iterations: 1000
-      depth: 8
-      learning_rate: 0.05
-      min_data_in_leaf: 20
-    XGB:
-      max_depth: 8
-      learning_rate: 0.05
-      n_estimators: 500
-      subsample: 0.8
-      colsample_bytree: 0.8
-    NN_TORCH:
-      num_epochs: 100
-      learning_rate: 0.001
-      dropout_prob: 0.1
-      weight_decay: 0.01
-      batch_size: 512
-      layers: [200, 100]
+    full:
+      time_limit: 7200
+      presets: best_quality
+      hyperparameters:
+        GBM:
+          extra_trees: true
+          learning_rate: 0.05
+          num_boost_round: 500
+          num_leaves: 128
+          feature_fraction: 0.8
+          min_data_in_leaf: 20
+        CAT:
+          iterations: 1000
+          depth: 8
+          learning_rate: 0.05
+          min_data_in_leaf: 20
+        XGB:
+          max_depth: 8
+          learning_rate: 0.05
+          n_estimators: 500
+          subsample: 0.8
+          colsample_bytree: 0.8
+        NN_TORCH:
+          num_epochs: 100
+          learning_rate: 0.001
+          dropout_prob: 0.1
+          weight_decay: 0.01
+          batch_size: 512
+          layers: [200, 100]
 
-models.logistic.quick:
-  max_iter: 100
-  solver: lbfgs
-  hyperparameters:
-    C: 1.0
-    penalty: l2
+  logistic:
+    quick:
+      max_iter: 100
+      solver: lbfgs
+      hyperparameters:
+        C: 1.0
+        penalty: l2
 
-  optimize:
-    enabled: true
-    param_space:
-      C:
-        type: float
-        low: 0.1
-        high: 1.0
-        log: true
-      penalty:
-        type: categorical
-        choices: [l2]
-    n_trials: 10
-    timeout: 600
-    direction: maximize
+      optimize:
+        enabled: true
+        param_space:
+          C:
+            type: float
+            low: 0.1
+            high: 1.0
+            log: true
+          penalty:
+            type: categorical
+            choices: [l2]
+        n_trials: 10
+        timeout: 600
+        direction: maximize
 
-models.logistic.full:
-  optimize: true
-  max_iter: 1000
-  solver: saga
-  hyperparameters:
-    C: 0.1
-    penalty: l2
-    tol: 1e-4
-    class_weight: balanced
-    param_space:
-      C:
-        type: float
-        low: 0.01
-        high: 10.0
-        log: true
-      penalty:
-        type: categorical
-        choices: [l1, l2]
-      solver:
-        type: categorical
-        choices: [liblinear, saga]
-    n_trials: 50
-    timeout: 3600
-    direction: maximize
+    full:
+      max_iter: 1000
+      solver: saga
+      hyperparameters:
+        C: 0.1
+        penalty: l2
+        tol: 1e-4
+        class_weight: balanced
+
+      optimize:
+        enabled: true
+        param_space:
+          C:
+            type: float
+            low: 0.01
+            high: 10.0
+            log: true
+          penalty:
+            type: categorical
+            choices: [l1, l2]
+          solver:
+            type: categorical
+            choices: [liblinear, saga]
+        n_trials: 50
+        timeout: 3600
+        direction: maximize
 
 #-----------------------------------------------------------------------------#
 # Visualization settings
