Remove DVC-tracked files from Git tracking and update .gitignore

--- a/pipeline/.gitignore
+++ b/pipeline/.gitignore
@@ -23,3 +23,117 @@
 update.sh
 wandb/*
 /feature_repo
+.venv
+data/interim/cleaned.parquet
+data/processed/features.parquet
+data/processed/features_not_onehot.parquet
+data/raw/data.csv
+data/raw/data.parquet
+data/raw/metadata.json
+data/raw/variables.json
+metrics/autogluon/feature_importance.csv
+metrics/autogluon/metrics.json
+metrics/explore/metrics.json
+metrics/featurize/metrics.json
+metrics/featurize/statistics.json
+metrics/ingest/metrics.json
+metrics/logistic/feature_importance.csv
+metrics/logistic/metrics.json
+metrics/preprocess/metrics.json
+models/autogluon
+models/logistic/model.joblib
+plots/autogluon/calibration_curve.png
+plots/autogluon/confusion_matrix.png
+plots/autogluon/feature_importance.png
+plots/autogluon/precision_recall_curve.png
+plots/autogluon/probability_distribution.png
+plots/autogluon/roc_curve.png
+plots/explore/A1Cresult_chi_square.png
+plots/explore/A1Cresult_distribution.png
+plots/explore/acarbose_chi_square.png
+plots/explore/acetohexamide_chi_square.png
+plots/explore/age_chi_square.png
+plots/explore/age_distribution.png
+plots/explore/change_chi_square.png
+plots/explore/chlorpropamide_chi_square.png
+plots/explore/clinical_metrics_boxplot.png
+plots/explore/clinical_numeric_correlation_heatmap.png
+plots/explore/correlation_matrix_heatmap.png
+plots/explore/demographics_age_distribution.png
+plots/explore/diabetesMed_chi_square.png
+plots/explore/diag_1_chi_square.png
+plots/explore/diag_1_distribution.png
+plots/explore/diag_2_chi_square.png
+plots/explore/diag_2_distribution.png
+plots/explore/diag_3_chi_square.png
+plots/explore/diag_3_distribution.png
+plots/explore/feature_importance.csv
+plots/explore/feature_importance.png
+plots/explore/gender_chi_square.png
+plots/explore/gender_distribution.png
+plots/explore/glimepiride-pioglitazone_chi_square.png
+plots/explore/glimepiride_chi_square.png
+plots/explore/glipizide-metformin_chi_square.png
+plots/explore/glipizide-metformin_distribution.png
+plots/explore/glipizide_chi_square.png
+plots/explore/glyburide-metformin_chi_square.png
+plots/explore/glyburide-metformin_distribution.png
+plots/explore/glyburide_chi_square.png
+plots/explore/glyburide_distribution.png
+plots/explore/insulin_chi_square.png
+plots/explore/insulin_distribution.png
+plots/explore/lab_results_distribution.png
+plots/explore/max_glu_serum_chi_square.png
+plots/explore/max_glu_serum_distribution.png
+plots/explore/medical_specialty_chi_square.png
+plots/explore/metformin-pioglitazone_chi_square.png
+plots/explore/metformin-pioglitazone_distribution.png
+plots/explore/metformin-rosiglitazone_distribution.png
+plots/explore/metformin_chi_square.png
+plots/explore/metformin_distribution.png
+plots/explore/miglitol_chi_square.png
+plots/explore/nateglinide_chi_square.png
+plots/explore/payer_code_chi_square.png
+plots/explore/pioglitazone_chi_square.png
+plots/explore/race_chi_square.png
+plots/explore/race_distribution.png
+plots/explore/repaglinide_chi_square.png
+plots/explore/rosiglitazone_chi_square.png
+plots/explore/service_numeric_correlation_heatmap.png
+plots/explore/service_utilization_distribution.png
+plots/explore/tolazamide_chi_square.png
+plots/explore/tolbutamide_chi_square.png
+plots/explore/troglitazone_chi_square.png
+plots/featurize/age_distribution.png
+plots/featurize/age_number_diagnoses_distribution.png
+plots/featurize/change_num_medications_distribution.png
+plots/featurize/feature_correlations.png
+plots/featurize/feature_importance.csv
+plots/featurize/feature_importance.png
+plots/featurize/num_medications_distribution.png
+plots/featurize/num_medications_num_lab_procedures_distribution.png
+plots/featurize/num_medications_num_procedures_distribution.png
+plots/featurize/num_medications_number_diagnoses_distribution.png
+plots/featurize/num_medications_numchange_distribution.png
+plots/featurize/num_medications_time_in_hospital_distribution.png
+plots/featurize/num_procedures_distribution.png
+plots/featurize/number_diagnoses_time_in_hospital_distribution.png
+plots/featurize/readmission_distribution.png
+plots/featurize/time_in_hospital_distribution.png
+plots/featurize/time_in_hospital_num_lab_procedures_distribution.png
+plots/ingest/data_types.png
+plots/ingest/missing_values.png
+plots/logistic/confusion_matrix.png
+plots/logistic/feature_importance.png
+plots/logistic/precision_recall_curve.png
+plots/logistic/roc_curve.png
+plots/preprocess/missing_values.png
+plots/preprocess/num_lab_procedures_distribution.png
+plots/preprocess/num_medications_distribution.png
+plots/preprocess/num_procedures_distribution.png
+plots/preprocess/number_diagnoses_distribution.png
+plots/preprocess/number_emergency_distribution.png
+plots/preprocess/number_inpatient_distribution.png
+plots/preprocess/number_outpatient_distribution.png
+plots/preprocess/readmission_distribution.png
+plots/preprocess/time_in_hospital_distribution.png
