--- a/pipeline/.gitignore
+++ b/pipeline/.gitignore
@@ -138,3 +138,7 @@ plots/preprocess/number_outpatient_distribution.png
 plots/preprocess/readmission_distribution.png
 plots/preprocess/time_in_hospital_distribution.png
 plots/autogluon/feature_importance.csv
+data/feature_repo/data_hash.txt
+data/feature_repo/feature_store.yaml
+data/feature_repo/features_not_onehot.parquet
+data/feature_repo/metrics.json
