Remove DVC-tracked files from Git tracking and update .gitignore

--- a/pipeline/.gitignore
+++ b/pipeline/.gitignore
@@ -142,3 +142,4 @@ data/feature_repo/data_hash.txt
 data/feature_repo/feature_store.yaml
 data/feature_repo/features_not_onehot.parquet
 data/feature_repo/metrics.json
+data/feature_repo/features.parquet
